# 2025-12-14-python-claude-beads

./: README.md  prompts.txt  pyproject.toml
.beads/: issues.jsonl
src/brazilian_soccer_mcp/: __init__.py  database.py  models.py  queries.py  server.py
src/brazilian_soccer_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_analytics.py  test_match_queries.py  test_player_queries.py  test_team_queries.py
tests/features/: analytics.feature  match_queries.feature  player_queries.feature  team_queries.feature
