[project]
name = "brazilian-soccer-mcp"
version = "0.1.0"
description = "MCP server for Brazilian soccer knowledge graph with Neo4j"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "neo4j>=5.0.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
    "unidecode>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-bdd>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
brazilian-soccer-mcp = "brazilian_soccer_mcp.server:main"
